# znippy

./: Cargo.toml  LICENSE  README.md  TODO_NOW.md  backlog.md  before_cratering.sh  bench_history.json  design.md  meta.json  when_token_ran_out.txt
.cargo/: config.toml
.github/: copilot-instructions.md
compress/: Cargo.toml
compress/src/: lib.rs  main.rs  packer.rs
decompress/: Cargo.toml
decompress/src/: lib.rs  main.rs  unpacker.rs
snippy-cli/: Cargo.toml
snippy-cli/src/: lib.rs  main.rs
snippy-common/: Cargo.toml
snippy-common/src/: common_config.rs  file_entry.rs  index.rs  lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: compress_dir_bench.rs  integration_test.rs  maven_bench.rs  perf_bench.rs  plugin_integration_test.rs  repro_crate.rs
xtask/src/: main.rs
znippy/: Cargo.toml
znippy-cli/: Cargo.toml
znippy-cli/src/: lib.rs  main.rs
znippy-common/: Cargo.toml
znippy-common/src/: archive.rs  chunk_revolver.rs  chunkpool.rs  chunkrevolver.rs  codec.rs  common_config.rs  decompress.rs  file_entry.rs  index.rs  int_ring.rs  iterrevolver.rs  lib.rs  meta.rs  meta_sink.rs  plugin.rs  skip.rs  slotpool.rs
znippy-common/src/plugins/: cargo_native.rs  mod.rs  wasm_loader.rs
znippy-common/tests/: test.rs
znippy-compress/: Cargo.toml
znippy-compress/src/: lib.rs  packer.rs  slot_packer.rs  stream_packer.rs
znippy-decompress/: Cargo.toml
znippy-decompress/src/: lib.rs  unpacker.rs
znippy-iceberg/: Cargo.toml
znippy-iceberg/src/: lib.rs
znippy-iceberg/tests/: round_trip.rs
znippy-plugin-maven/: Cargo.toml
znippy-plugin-maven/src/: lib.rs  native.rs  pom.rs  resolver.rs
znippy-plugin-python/: Cargo.toml
znippy-plugin-python/src/: lib.rs  native.rs  wheel.rs
znippy-zoomies/: Cargo.toml  LICENSE  README.md
znippy-zoomies/src/: gatling.rs  lib.rs  psort.rs  stree.rs  vtd.rs
znippy-zoomies/src/chunk_revolver/: mod.rs  revolver.rs  ring.rs
znippy/src/: main.rs
zstd-sys-patched/: Cargo.toml  build.rs  wrapper.h
zstd-sys-patched/src/: bindings.rs  lib.rs
