# Root Cargo.toml
[workspace]
members = [
    "znippy-compress",
    "znippy-decompress",
    "znippy-cli",
    "znippy-common",
    "znippy",
    "znippy-plugin-maven",
    "tests",
    "xtask",
]
resolver = "2"

[patch.crates-io]
znippy-common = { path = "znippy-common" }
znippy-compress = { path = "znippy-compress" }
znippy-decompress = { path = "znippy-decompress" }
znippy-cli = { path = "znippy-cli" }
