[package]
name = "compress"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
blake3 = "1.8.2"
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10"
anyhow = "1.0.98"
hex = "0.4.3"
zstd-sys = { path = "../zstd-sys-patched", version = "2.0.15" }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1"  ,features = ["serde"] }

snippy-common = { path = "../snippy-common" }

