# decompress/Cargo.toml

[package]
name = "decompress"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1"  ,features = ["serde"] }
blake3 = "1.8.2"
zstd-sys = { path = "../zstd-sys-patched" }
rayon = "1.10.0"
walkdir = "2.5.0"
znippy-common = { path = "../znippy-common" }
log = "0.4.27"
parking_lot = "0.12.4"
crossbeam-channel = "0.5.15"
sysinfo = { version = "0.35.2", features = ["multithread"] }

