[package]
name = "znippy-tests"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []

[dependencies]
znippy-compress = { path = "../znippy-compress" }
znippy-common = { path = "../znippy-common" }
znippy-plugin-maven = { path = "../znippy-plugin-maven", features = ["resolve", "host-decompressors"] }
anyhow = "1.0.100"
tempfile = "3"
env_logger = "0.11.8"
walkdir = "2.5.0"
miniz_oxide = "0.8"
dirs = "6"
io-uring = "0.7"
libc = "0.2"
