[package]
name = "znippy-common"
version = "0.2.5"
edition = "2024"
authors = ["Rickard Lundin <rickard@x14.se>"]
description = "Core logic and data structures for Znippy, a parallel chunked compression system."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["compression", "filesystem", "data-structures"]
keywords = ["compression", "zstd", "parallel", "arrow", "blake3"]

[features]
default = ["zstd"]
zstd = ["dep:zstd-sys-rs"]
openzl = ["dep:openzl-sys-rs"]
ext-cargo = ["dep:flate2", "dep:tar"]
wasm-plugins = ["dep:wasmtime"]

[dependencies]
zstd-sys-rs = { version = "1.5.10", optional = true }
openzl-sys-rs = { version = "0.1.0", optional = true }
flate2 = { version = "1.1", optional = true }
tar = { version = "0.4", optional = true }
wasmtime = { version = "33", optional = true }
anyhow = "1.0.100"
blake3 = "1.8.2"
sysinfo = { version = "0.37.2", features = ["multithread"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
hex = "0.4.3"
arrow = "57.0.0"
arrow-array = "57.0.0"
crossbeam-channel = "0.5.15"
