[package]
name = "znippy-common"
version = "0.7.2"
edition = "2024"
authors = ["Rickard Lundin <rickard@ignalina.dk>"]
description = "Core logic and data structures for Znippy, a parallel chunked compression system."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["compression", "filesystem", "data-structures"]
keywords = ["compression", "zstd", "parallel", "arrow", "blake3"]

[features]
default = []
ext-cargo = ["dep:flate2", "dep:tar"]
wasm-plugins = ["dep:wasmtime", "dep:miniz_oxide"]
host-decompressors = ["dep:ljar", "dep:lbzip2", "dep:lgz", "dep:tar"]

[dependencies]
openzl-sys-rs = "0.2.0"
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4", optional = true }
wasmtime = { version = "45.0.0", optional = true }
miniz_oxide = { version = "0.9.1", optional = true }
anyhow = "1.0.100"
blake3 = "1.8.5"
sysinfo = { version = "0.39.2", features = ["multithread"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
hex = "0.4.3"
arrow = "58.3.0"
arrow-array = "58.3.0"
arrow-select = "58.3.0"
crossbeam-channel = "0.5.15"
ljar = { version = "0.1.0", optional = true }
lbzip2 = { version = "0.4.2", optional = true }
lgz = { version = "0.2.0", optional = true }
