[package]
name = "znippy-compress"
version = "0.2.5"
edition = "2024"
authors = ["Rickard Lundin <rickard@x14>"]
description = "Compression logic for Znippy, a parallel chunked compression system."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["compression", "filesystem", "data-structures"]    
keywords = ["compression", "zstd", "parallel", "arrow", "blake3"]

[features]
default = ["zstd"]
zstd = ["dep:zstd-sys-rs", "znippy-common/zstd"]
openzl = ["dep:openzl-sys-rs", "znippy-common/openzl"]

[dependencies]
zstd-sys-rs = { version = "1.5.10", optional = true }
openzl-sys-rs = { version = "0.1.0", optional = true }
walkdir = "2.5.0"
blake3 = "1.8.2"
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
arrow = "57.0.0"
znippy-common = { version = "0.2.5", default-features = false }
#znippy-common = { path = "../znippy-common", default-features = false }
log = "0.4.28"

