[package]
name = "znippy-compress"
version = "0.7.2"
edition = "2024"
authors = ["Rickard Lundin <rickard@ignalina.dk>"]
description = "Compression logic for Znippy, a parallel chunked compression system."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["compression", "filesystem", "data-structures"]    
keywords = ["compression", "openzl", "parallel", "arrow", "blake3"]

[features]
default = []

[dependencies]
walkdir = "2.5.0"
blake3 = "1.8.2"
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
arrow = "58.3.0"
znippy-common = { version = "0.7.4" }
#znippy-common = { path = "../znippy-common" }
log = "0.4.28"
