# decompress/Cargo.toml

[package]
name = "znippy-decompress"
version = "0.2.5"
edition = "2024"
authors = ["Rickard Lundin <rickard@x14>"]
description = "decompress logic for Znippy, a parallel chunked compression system."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["compression", "filesystem", "data-structures"]    
keywords = ["compression", "zstd", "parallel", "arrow", "blake3"]




[features]
default = ["zstd"]
zstd = ["znippy-common/zstd"]
openzl = ["znippy-common/openzl"]

[dependencies]
anyhow = "1.0.100"
#znippy-common = { path = "../znippy-common", default-features = false }
znippy-common = { version = "0.2.5", default-features = false }
