[package]
name = "znippy-decompress"
version = "0.7.2"
edition = "2024"
authors = ["Rickard Lundin <rickard@ignalina.dk>"]
description = "Decompress logic for Znippy, a parallel chunked compression system."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["compression", "filesystem", "data-structures"]
keywords = ["compression", "openzl", "parallel", "arrow", "blake3"]

[features]
default = []

[dependencies]
anyhow = "1.0.100"
znippy-common = { version = "0.7.3" }
#znippy-common = { path = "../znippy-common" }
