[package]
name = "znippy-plugin-maven"
version = "0.6.1"
edition = "2024"
description = "Maven/JAR metadata plugin for znippy (compiles to native + WASM)"
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
authors = ["Rickard Lundin <rickard@x14.se>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
miniz_oxide = "0.8"
quick-xml = "0.36"
ureq = { version = "2", optional = true }

[features]
default = []
resolve = ["ureq"]
