[package]
name = "znippy-plugin-maven"
version = "0.7.3"
edition = "2024"
description = "Maven/JAR metadata plugin for znippy (compiles to native + WASM)"
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
authors = ["Rickard Lundin <rickard@ignalina.dk>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
miniz_oxide = "0.8"
quick-xml = "0.36"
ureq = { version = "2", optional = true }
ljar = { version = "0.2.0", optional = true }
rayon = { version = "1", optional = true }
znippy-common = { version = "0.7.4", path = "../znippy-common", optional = true }

[features]
default = []
resolve = ["dep:ureq"]
host-decompressors = ["dep:ljar", "dep:rayon", "dep:znippy-common"]
