[package]
name = "znippy-plugin-python"
version = "0.7.2"
edition = "2024"
description = "Python wheel/sdist metadata plugin for znippy (PEP 503/658)"
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
authors = ["Rickard Lundin <rickard@ignalina.dk>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
miniz_oxide = "0.8"
lzip-parallel = { version = "0.2.0", optional = true }
rayon = { version = "1", optional = true }
znippy-common = { version = "0.7.2", path = "../znippy-common", optional = true }

[features]
default = []
host-decompressors = ["dep:lzip-parallel", "dep:rayon", "dep:znippy-common"]
