[package]
name    = "znippy-zoomies"
version = "0.1.8"
edition = "2024"
description = "Fast parallel OSM-XML index (VTD-style) + static search tree + zero-copy slot pool + generic no-barrier streaming engine (gatling) + parallel sample sort (psort)"
repository = "https://github.com/Ignalina/znippy"
# The `stree` module is derived from Ragnar Groot Koerkamp's static-search-tree (MIT).
# His copyright notice is retained in LICENSE, as MIT requires.
license = "MIT"
readme = "README.md"

[dependencies]
anyhow  = "1"
memchr  = "2"
memmap2 = "0.9"
rayon   = "1"

[dev-dependencies]
rand = "0.8"


[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
