[package]
name = "znippy"
version = "0.2.5"
edition = "2024"
authors = ["Rickard Lundin <rickard@x14.se>"]
description = "Znippy compresses files using Arrow IPC. Readable by DuckDB,Polars,Datafusion. May Allfather Odin watch over every bit."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["command-line-utilities", "compression"]
keywords = ["zstd", "arrow", "blake3", "cli","polars"]

[features]
default = ["zstd"]
zstd = ["znippy-cli/zstd"]
openzl = ["znippy-cli/openzl"]

[dependencies]
#znippy-cli = { path ="../znippy-cli", default-features = false }
znippy-cli = { version = "0.2.5", default-features = false }
