[package]
name = "znippy"
version = "0.5.2"
edition = "2024"
authors = ["Rickard Lundin <rickard@x14.se>"]
description = "Znippy compresses files using Arrow IPC. Readable by DuckDB,Polars,Datafusion. May Allfather Odin watch over every bit."
license = "MIT"
repository = "https://github.com/Ignalina/znippy"
readme = "../README.md"
categories = ["command-line-utilities", "compression"]
keywords = ["openzl", "arrow", "blake3", "cli", "polars"]

[features]
default = []

[dependencies]
znippy-cli = { version = "0.5.2" }
#znippy-cli = { path ="../znippy-cli" }
